--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
-<html data-theme="dark" lang="en">
+<html data-theme="forest" lang="en">
 <head>
   <meta charset="utf-8">
   <title>TuClub</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
